updated validation logic with runners, added docker automation example, reogragnized documentation